Fix styling issue with certain code fragments on mobile devices

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -225,6 +225,10 @@ body {
 		padding-top: 1vh;
 		padding-left: 0;
 		padding-right: 0;
+
+        pre {
+            white-space: pre-wrap;
+        }
 	}
 
     .printbutton {
